--- a/.github/workflows/moodle_csv_to_sharepoint.yml
+++ b/.github/workflows/moodle_csv_to_sharepoint.yml
@@ -1,12 +1,10 @@
-name: Moodle CSV to SharePoint
+name: Test Moodle CSV (nur Download)
 
 on:
-  schedule:
-    - cron: "5 * * * *"    # jede Stunde +5 Min
-  workflow_dispatch:       # manuell auslösbar
+  workflow_dispatch: {}   # manuell startbar
 
 jobs:
-  run:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -19,93 +17,92 @@ jobs:
       - name: Install deps
         run: pip install requests
 
-      - name: Download Moodle CSV and upload to SharePoint
+      - name: Download CSV (mit Debug)
         env:
           MOODLE_BASE: ${{ secrets.MOODLE_BASE }}
           MOODLE_USER: ${{ secrets.MOODLE_USER }}
           MOODLE_PASS: ${{ secrets.MOODLE_PASS }}
           REPORT_ID:   ${{ secrets.REPORT_ID }}
-          GRAPH_TENANT_ID:     ${{ secrets.GRAPH_TENANT_ID }}
-          GRAPH_CLIENT_ID:     ${{ secrets.GRAPH_CLIENT_ID }}
-          GRAPH_CLIENT_SECRET: ${{ secrets.GRAPH_CLIENT_SECRET }}
-          SPSITE_ID: ${{ secrets.SPSITE_ID }}
-          SPDRIVE_ID: ${{ secrets.SPDRIVE_ID }}
-          SP_FOLDER:  ${{ secrets.SP_FOLDER }}
         run: |
           python - <<'PY'
-          import os, re, datetime, requests, sys
+          import os, re, sys, datetime, pathlib, requests
 
           BASE = os.environ["MOODLE_BASE"].rstrip("/")
           USER = os.environ["MOODLE_USER"]
           PASS = os.environ["MOODLE_PASS"]
           RID  = os.environ["REPORT_ID"]
 
-          TENANT = os.environ["GRAPH_TENANT_ID"]
-          CID    = os.environ["GRAPH_CLIENT_ID"]
-          CSEC   = os.environ["GRAPH_CLIENT_SECRET"]
-          SITE   = os.environ["SPSITE_ID"]
-          DRIVE  = os.environ["SPDRIVE_ID"]
-          FOLDER = os.environ.get("SP_FOLDER","").strip()
+          def dump_debug(name, resp):
+              p = pathlib.Path(f"debug_{name}.txt")
+              # wenn Text → Text dumpen, sonst Bytes
+              ct = resp.headers.get("content-type","")
+              if ct.startswith("text/"):
+                  p.write_text(resp.text[:2000], encoding="utf-8")
+              else:
+                  p.write_bytes(resp.content[:2000])
+              print(f"[DEBUG] {name}: {resp.status_code} {resp.url}")
+              print(f"[DEBUG] Content-Type: {ct}")
+              if resp.history:
+                  print("[DEBUG] Redirects:", " -> ".join([h.headers.get("Location","?") for h in resp.history if h.headers.get("Location")]))
 
-          session = requests.Session()
-          session.headers.update({"User-Agent":"github-actions-moodle-uploader/1.0"})
+          s = requests.Session()
+          s.headers.update({"User-Agent": "gh-moodle-csv/1.1"})
 
-          # 1) Loginseite → logintoken
-          r = session.get(f"{BASE}/login/index.php", timeout=30)
-          m = re.search(r'name="logintoken"\s+value="([^"]+)"', r.text)
-          if not m:
-              print("logintoken nicht gefunden – ist Passwort-Login erlaubt?", file=sys.stderr)
-              sys.exit(1)
-          token = m.group(1)
-
-          # 2) Login (Form POST)
-          r = session.post(f"{BASE}/login/index.php",
-                           data={"username": USER, "password": PASS, "logintoken": token},
-                           allow_redirects=True, timeout=30)
-          # Quick-Check: /my/ sollte nicht zur Loginseite führen
-          chk = session.get(f"{BASE}/my/", allow_redirects=True, timeout=30)
-          if "login/index.php" in chk.url:
-              print("Login fehlgeschlagen (evtl. SSO erzwungen?)", file=sys.stderr)
-              sys.exit(2)
-
-          # 3) CSV abrufen
-          csv_url = f"{BASE}/report/customsql/view.php?id={RID}&download=1"
-          r = session.get(csv_url, timeout=120)
-          if r.status_code != 200 or not r.content:
-              print(f"CSV-Download fehlgeschlagen: HTTP {r.status_code}", file=sys.stderr)
-              sys.exit(3)
-          csv_bytes = r.content
-
-          # 4) Graph Token
-          tok = requests.post(
-              f"https://login.microsoftonline.com/{TENANT}/oauth2/v2.0/token",
-              data={
-                  "client_id": CID,
-                  "client_secret": CSEC,
-                  "scope": "https://graph.microsoft.com/.default",
-                  "grant_type": "client_credentials",
-              },
-              timeout=30,
-          )
-          tok.raise_for_status()
-          access_token = tok.json()["access_token"]
-
-          # 5) Upload nach SharePoint
-          ts = datetime.datetime.utcnow().strftime("%Y%m%d_%H%M")
-          fname = f"moodle_report_{RID}_{ts}.csv"
-          if FOLDER:
-              path = f":/{FOLDER}/{fname}:/content"
+          # 1) Login-Seite (versuche manuelles Login explizit, falls SSO vorhanden)
+          login_urls = [
+              f"{BASE}/login/index.php?auth=manual",  # falls vorhanden
+              f"{BASE}/login/index.php"
+          ]
+          r = None
+          for url in login_urls:
+              r = s.get(url, allow_redirects=True, timeout=45)
+              dump_debug("login_page", r)
+              m = re.search(r'name="logintoken"\s+value="([^"]+)"', r.text or "")
+              if m:
+                  token = m.group(1)
+                  break
           else:
-              path = f":/{fname}:/content"
+              print("FEHLER: logintoken nicht gefunden (evtl. SSO erzwungen / falsche Loginseite).", file=sys.stderr)
+              sys.exit(10)
 
-          up = requests.put(
-              f"https://graph.microsoft.com/v1.0/sites/{SITE}/drives/{DRIVE}/root{path}",
-              headers={"Authorization": f"Bearer {access_token}"},
-              data=csv_bytes,
-              timeout=180,
-          )
-          if up.status_code not in (200, 201):
-              print(f"SharePoint Upload fehlgeschlagen: HTTP {up.status_code} {up.text}", file=sys.stderr)
-              sys.exit(4)
-          print(f"OK – hochgeladen als {fname}")
+          # 2) Login
+          r = s.post(f"{BASE}/login/index.php",
+                     data={"username": USER, "password": PASS, "logintoken": token},
+                     allow_redirects=True, timeout=60)
+          dump_debug("login_post", r)
+
+          # 3) Check auf /my/ (sollte NICHT wieder Login sein)
+          chk = s.get(f"{BASE}/my/", allow_redirects=True, timeout=45)
+          dump_debug("after_login_my", chk)
+          if "login/index.php" in chk.url or chk.status_code in (401, 403):
+              print("FEHLER: Login fehlgeschlagen oder zu Login umgeleitet (SSO erzwungen? falsche Credentials? Rechte?).", file=sys.stderr)
+              sys.exit(11)
+
+          # 4) CSV abrufen
+          csv_url = f"{BASE}/report/customsql/view.php?id={RID}&download=1"
+          r = s.get(csv_url, allow_redirects=True, timeout=180)
+          dump_debug("csv_download", r)
+
+          ct = r.headers.get("content-type","")
+          if r.status_code != 200:
+              print(f"FEHLER: CSV-Download HTTP {r.status_code}", file=sys.stderr); sys.exit(12)
+          if "text/csv" not in ct and "application/vnd.ms-excel" not in ct:
+              print("FEHLER: Kein CSV-Content-Type erhalten (oft HTML wegen fehlender Berechtigung/Session).", file=sys.stderr); sys.exit(13)
+          if not r.content or len(r.content) < 5:
+              print("FEHLER: CSV leer oder zu klein.", file=sys.stderr); sys.exit(14)
+
+          pathlib.Path("out").mkdir(exist_ok=True)
+          fname = f"moodle_report_{RID}_{datetime.datetime.utcnow().strftime('%Y%m%d_%H%M')}.csv"
+          (pathlib.Path("out")/fname).write_bytes(r.content)
+          print(f"OK: gespeichert als out/{fname}")
           PY
+
+      - name: Upload Artefakte (CSV & Debug)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: moodle_csv_debug
+          path: |
+            out/*.csv
+            debug_*.txt
+          if-no-files-found: warn
